[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/prod_logot.png" type="Texture" id=1]
[ext_resource path="res://levels/Logoscene.gd" type="Script" id=2]
[ext_resource path="res://sound/LogoSound.wav" type="AudioStream" id=3]
[ext_resource path="res://effects/ui_theme.tres" type="Theme" id=4]

[node name="Logoscene" type="Node2D"]
script = ExtResource( 2 )

[node name="Logo" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Tween" type="Tween" parent="."]

[node name="LogoSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Meta"

[node name="text_part1" type="RichTextLabel" parent="."]
margin_left = 4.0
margin_top = 7.0
margin_right = 190.0
margin_bottom = 106.0
theme = ExtResource( 4 )
custom_constants/line_separation = -3
bbcode_enabled = true
bbcode_text = "\"Mais, quand d'un passé ancien rien ne subsiste ..."
text = "\"Mais, quand d'un passé ancien rien ne subsiste ..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_part2" type="RichTextLabel" parent="."]
margin_left = 4.0
margin_right = 192.0
margin_bottom = 108.0
theme = ExtResource( 4 )
custom_constants/line_separation = -3
bbcode_enabled = true
bbcode_text = "


... plus freles mais plus vivaces, l'odeur et la saveur restent encore longtemps ..."
text = "


... plus freles mais plus vivaces, l'odeur et la saveur restent encore longtemps ..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_part3" type="RichTextLabel" parent="."]
margin_left = 4.0
margin_top = -7.0
margin_right = 192.0
margin_bottom = 102.0
theme = ExtResource( 4 )
custom_constants/line_separation = -3
bbcode_enabled = true
bbcode_text = "





... comme des ames, à porter sans fléchir, l'édifice immense du souvenir.\""
text = "





... comme des ames, à porter sans fléchir, l'édifice immense du souvenir.\""
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_part4" type="RichTextLabel" parent="."]
margin_left = -1.0
margin_top = -1.0
margin_right = 186.0
margin_bottom = 102.0
theme = ExtResource( 4 )
custom_constants/line_separation = -3
bbcode_enabled = true
bbcode_text = "








[right]Marcel Proust[/right]"
text = "








Marcel Proust"
__meta__ = {
"_edit_use_anchors_": false
}
